--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "Nibiru",
-  "version": "0.0.1",
+    "name": "Nibiru",
+    "version": "0.0.1",
+    "description": "A sample Node.js app using Express 4",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
   "dependencies": {
     "express": "^4.11.0",
     "express.io": "^1.1.13",
     "swig": "^1.4.2"
-  }
+    },
+  "engines": {
+    "node": "0.10.x"
+  },
 }
