--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "Nibiru",
-    "version": "0.0.1",
-    "description": "A sample Node.js app using Express 4",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "^4.11.0",
-        "express.io": "^1.1.13",
-        "swig": "^1.4.2"
-    }
+  "name": "Nibiru",
+  "version": "0.0.1",
+  "description": "A sample Node.js app using Express 4",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.11.0",
+    "express.io": "^1.1.13",
+    "swig": "^1.4.2",
+    "twitter": "^1.0.3",
+    "underscore": "^1.7.0"
+  }
 }
