--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.11.0",
     "express.io": "^1.1.13",
+    "geocoder": "^0.2.2",
     "swig": "^1.4.2",
     "twitter": "^1.0.3",
     "underscore": "^1.7.0"
