--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "swig": "^1.4.2",
     "twitter": "^1.0.3",
     "underscore": "^1.7.0"
-  }
+  },
+  "engines": {
+      "node": "0.10.x"
+  },
+  "keywords": [
+      "node",
+      "heroku",
+      "express"
+  ],
+  "license": "MIT"
 }
